updated css class names to make them more clear

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- Benefits Section -->
     <section class="benefits">
-        <div class="benefit">
+        <div class="benefit-block">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="gear turning into money" />
             <p>
@@ -73,7 +73,7 @@
                 to your website.
             </p>
         </div>
-        <div class="benefit">
+        <div class="benefit-block">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="lightbulb going off in someone's head" />
             <p>
@@ -81,7 +81,7 @@
                 for your business.
             </p>
         </div>
-        <div class="benefit">
+        <div class="benefit-block">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="dollar sign"></img>
             <p>
